apps/youtrack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtrack
  namespace: youtrack
  labels:
    app: youtrack
spec:
  selector:
    matchLabels:
      app: youtrack
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: youtrack
    spec:
      volumes:
        - name: youtrack-data
          persistentVolumeClaim:
            claimName: youtrack-data
        - name: youtrack-conf
          persistentVolumeClaim:
            claimName: youtrack-conf
        - name: youtrack-logs
          persistentVolumeClaim:
            claimName: youtrack-logs
        - name: youtrack-backups
          persistentVolumeClaim:
            claimName: youtrack-backups
      containers:
        - name: youtrack
          image: jetbrains/youtrack:2026.2.18695
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              memory: 4Gi
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: youtrack-data
              mountPath: /opt/youtrack/data
            - name: youtrack-conf
              mountPath: /opt/youtrack/conf
            - name: youtrack-logs
              mountPath: /opt/youtrack/logs
            - name: youtrack-backups
              mountPath: /opt/youtrack/backups
