apps/youtrack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtrack
  namespace: youtrack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: youtrack.sakul-flee.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: youtrack
                port:
                  number: 8080
  tls:
    - hosts:
        - youtrack.sakul-flee.de
      secretName: youtrack-sakul-flee-de-tls
